--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -11,6 +11,7 @@ section#contact-items {
   div.container {
     background-image: url("/assets/images/website/page-contact/items/bg.svg");
     background-repeat: no-repeat;
+    background-position: 50%;
     border-radius: 16px;
     padding: 3rem;
 
