fix: sticky navbar + blog anchor

--- a/_sass/_dev-machine.scss
+++ b/_sass/_dev-machine.scss
@@ -109,6 +109,7 @@ section#dm-rse {
 
       #environnemental-items {
         display: none;
+        z-index: 1;
         background-color: white;
         color: $secondary;
         text-align: left;
