--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -7,6 +7,15 @@ section#contact-intro {
   }
 }
 
+section#contact-form {
+  button {
+    width: 100%;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 section#contact-items {
   div.container {
     background-image: url("/assets/images/website/page-contact/items/bg.svg");
