--- a/_sass/_offre.scss
+++ b/_sass/_offre.scss
@@ -159,6 +159,15 @@ section#offre-prestations {
   }
 
   div.prestation {
+    position: relative;
+    // Trick: remonter un peu les anchor sinon pbm avec la sticky navbar
+    a.anchor {
+      position: absolute;
+      // taille de la navbar (4rem) + margin des blocs (2rem)
+      top: -6rem;
+      visibility: hidden;
+    }
+
     padding: 2rem 0;
     border-radius: 32px;
     align-items: center;
