fix: correction après retours

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,12 +5,12 @@
         </div>
         <div class="row mt-5 mb-5 d-flex justify-content-around links-container">
             <a href="/">Accueil</a>
-            <a href="/">Offre</a>
-            <a href="/">Savoir-faire</a>
-            <a href="/">DEVmachine</a>
-            <a href="/">Contact</a>
-            <a href="/">Blog</a>
-            <a href="/">Recrutement</a>
+            <a href="/offre">Offre</a>
+            <a href="/savoir-faire">Savoir-faire</a>
+            <a href="/dev-machine">DEVmachine</a>
+            <a href="/contact">Contact</a>
+            <a href="/blog">Blog</a>
+            <a href="/recrutement">Recrutement</a>
         </div>
         <div class="row d-flex justify-content-around bottom-container">
             <a id="mentions-btn" data-toggle="modal" data-target="#mentions">Mentions légales</a>
