--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -9,6 +9,7 @@
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .1), 0 6px 10px 0 rgba(0, 0, 0, .07), 0 1px 18px 0 rgba(0, 0, 0, .06);
   // min-height pour avoir + grand pour le menu déroulant sur téléphone 
   min-height: 4rem;
+  transition: box-shadow .2s, background-color .2s;
 
   // btn mode phone
   .navbar-toggler {
