--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -232,93 +232,69 @@ section#index-prestations {
     
     background-image: url("/assets/images/website/page-index/prestations/woman.svg");
     background-repeat: no-repeat;
-    background-position: 40% 50%;
-    
-    text-align: left;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 2rem 0;
+    background-position: center;
 
-    div.question-item-container {
-      // max 2 items par ligne
-      flex-basis: 50%;
-      
-      a.question-item {
-        background-color: $white;
-        color: $secondary;
-        margin: 0;
-        padding: .3rem 1rem;
-        max-width: 22rem;
+    div.questions-row {
+      margin-top: 4rem;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: nowrap;
 
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        border: 1px solid $light-grey;
-        border-radius: 8px;
-        box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.08);
-
-        span.fas {
-          color: $primary;
-          font-size: 1.4rem;
-        }
-
-        &:hover {
-          text-decoration: none;
-        }
-      }
-
-      // Custom padding pour ne pas les aligner
+      // effet pyramide
       &:nth-of-type(1) {
-        padding-top: 0;
-        padding-left: 0;
+        column-gap: 10rem;
       }
       &:nth-of-type(2) {
-        padding-top: 1rem;
-        padding-right: 7rem;
+        column-gap: 18rem;
       }
       &:nth-of-type(3) {
-        padding-top: 2rem;
-        padding-left: 2rem;
+        column-gap: 26rem;
       }
-      &:nth-of-type(4) {
-        padding-top: 1rem;
+    }
+
+    a.question-item {
+      background-color: $white;
+      color: $secondary;
+      margin: 0;
+      padding: .3rem 1rem;
+      max-width: 22rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      border: 1px solid $light-grey;
+      border-radius: 8px;
+      box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.08);
+
+      span.fas {
+        color: $primary;
+        font-size: 1.4rem;
       }
-      &:nth-of-type(5) {
-        padding-top: 2rem;
-        padding-left: 0;
-      }
-      &:nth-of-type(6) {
-        padding-top: 5rem;
-        padding-right: 4rem;
+
+      &:hover {
+        text-decoration: none;
       }
     }
 
     // En mode réduit, on met les items à gauche et l'image à droite
     @media (max-width: $md-size) {
-      flex-direction: column;
-      flex-wrap: nowrap;
-      gap: .5rem 0;
       background-position: 100% 50%;
-      // on réinitialise les padding
-      div.question-item-container {
-        padding: 0 !important;
-      }
-    }
 
-    @media (min-width: $sm-size) and (max-width: $md-size) {
-      a.question-item {
-        float: left !important;
+      div.questions-row {
+        flex-direction: column;
+        column-gap: 0;
+        margin-top: 1rem;
+        row-gap: 1rem;
+        align-items: start;
       }
     }
 
     // En mode phone, on retire l'image et on centre
     @media (max-width: $sm-size) {
       background: none;
-      a.question-item {
-        float: none !important;
-        margin: auto !important;
+      div.questions-row {
+        align-items: center;
       }
     }
   }
