feat: texte pour recrutement

--- a/_sass/_recrutement.scss
+++ b/_sass/_recrutement.scss
@@ -27,7 +27,7 @@ section#recrutement-posts {
         }
       }
 
-      div.contract-data, p.description {
+      div.contract-data, span.description {
         padding: 1rem;
         padding-bottom: 0;
       }
