--- a/_sass/_recrutement.scss
+++ b/_sass/_recrutement.scss
@@ -36,9 +36,12 @@ section#recrutement-posts {
         column-gap: .6rem;
 
         span {
+          display: flex;
+          align-items: center;
           padding: .2rem .8rem;
           border-radius: 10px;
           font-weight: 400;
+          height: 2rem;
   
           &.contract-cdi {
             background-color: #D1FAE5;
@@ -48,6 +51,16 @@ section#recrutement-posts {
           &.contract-full-time {
             background-color: #F3F4F6;
             color: #4B5563;
+          }
+
+          &.contract-location {
+            column-gap: 0.4rem;
+            background-color: rgba(36, 50, 82, .1);
+            color: $secondary;
+            // pin
+            img {
+              height: 75%;
+            }
           }
         }
       }
@@ -60,6 +73,23 @@ section#recrutement-posts {
       div.btn-container {
         text-align: right;
         padding: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        column-gap: 1rem;
+
+        a.postuler {
+          display: flex;
+          align-items: center;
+          column-gap: 1rem;
+          p {
+            margin-bottom: 0;
+          }
+          // envelope
+          img {
+            width: 1.5rem;
+          }
+        }
       }
     }
   }
