feat: text justify + savoir-faire texts

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -196,6 +196,7 @@ section#index-piliers {
     div.piliers-text {
       margin-left: 1rem;
       width: 70%;
+      text-align: justify;
     }
 
     // Bordures en croix quand 2 lignes 2 colonnes (défaut)
