fix: margin gestion pbm

--- a/_sass/_offre.scss
+++ b/_sass/_offre.scss
@@ -69,7 +69,7 @@ section#offre-vision {
           margin: 0 3rem 0 13rem;
         }
         &#item-5 {
-          margin: auto;
+          margin: 2rem auto 0;
         }
 
         span.info-icon {
