fix: img size + retours

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <img alt="logo" src="/assets/images/website/DM-white.svg" width="200"/>
         </div>
-        <div class="row mt-5 mb-5 d-flex justify-content-around links-container">
+        <div class="row mt-5 mb-5 d-flex justify-content-between links-container">
             <a href="/">Accueil</a>
             <a href="/offre">Offre</a>
             <a href="/savoir-faire">Savoir-faire</a>
@@ -12,7 +12,7 @@
             <a href="/blog">Blog</a>
             <a href="/recrutement">Recrutement</a>
         </div>
-        <div class="row d-flex justify-content-around bottom-container">
+        <div class="row d-flex justify-content-between bottom-container">
             <a id="mentions-btn" data-toggle="modal" data-target="#mentions">Mentions légales</a>
             <a href="mailto:contact@devmachine.fr">contact@devmachine.fr</a>
             <div>
