--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -3,7 +3,7 @@ div.dm-accordion {
 
   // 1 ensemble title + content
   div.accordion-container {
-    padding: 0 1rem;
+    padding: 1rem;
     border-bottom: 1px solid $light-grey;
 
     &:last-child {
