--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -160,6 +160,6 @@ ul.arrow-list, article.post-content ul, article.post-content ol {
     background-repeat: no-repeat;
     line-height: 23px;
     padding-left: 30px;
-    margin-bottom: 3px;
+    margin-bottom: .5rem;
   }
 }
