--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,7 +28,7 @@
           class="collapse navbar-collapse"
           id="navbarResponsive"
         >
-          <ul class="navbar-nav text-uppercase ml-auto">
+          <ul class="navbar-nav ml-auto">
             {% assign sorted_pages = site.html_pages | sort:"order" %}
             {% for navPage in sorted_pages %}
              {% unless navPage.exclude-nav %}
