--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -197,6 +197,10 @@ section#index-piliers {
       margin-left: 1rem;
       width: 70%;
       text-align: justify;
+
+      p.title {
+        font-size: 1.75rem
+      }
     }
 
     // Bordures en croix quand 2 lignes 2 colonnes (défaut)
