--- a/_sass/_recrutement.scss
+++ b/_sass/_recrutement.scss
@@ -20,10 +20,10 @@ section#recrutement-posts {
       div.heading {
         border-bottom: 1px solid $light-grey;
         padding: 1rem;
-
-        p {
+        p.title {
           margin: 0;
-          color: $light-grey;
+          font-size: 1.5rem;
+          font-weight: 600;
         }
       }
 
