--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -14,6 +14,17 @@ section#contact-form {
       cursor: pointer;
     }
   }
+
+  div#success-send {
+    display: none;
+    width: 100%;
+    background: rgba(106, 252, 138, .1);
+    color: $secondary;
+    height: 8rem;
+
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 section#contact-items {
