--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -17,7 +17,10 @@
   font-family: Nunito;
   src: url(/assets/fonts/Nunito/Nunito-Regular.ttf) format("truetype");
 }
-
+@font-face {
+  font-family: Nunito Bold;
+  src: url(/assets/fonts/Nunito/Nunito-Bold.ttf) format("truetype");
+}
 @font-face {
   font-family: Poppins;
   src: url(/assets/fonts/Poppins/Poppins-Regular.ttf) format("truetype");
