--- a/_sass/_savoir-faire.scss
+++ b/_sass/_savoir-faire.scss
@@ -9,6 +9,10 @@ section#savoir-faire-piliers {
   }
 }
 
+section#savoir-faire-stack {
+  background-color: #f8f9fa;
+}
+
 section#index-savoir-plus.bg-pink {
   // CSS de cette section définie dans _index.scss 
   background-color: $light-pink;
