--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <div class="container pt-5 pb-5">
-        <div class="row">
+        <div class="row logo-container">
             <img alt="logo" src="/assets/images/website/DM-white.svg" width="200"/>
         </div>
-        <div class="row mt-5 mb-5 d-flex justify-content-between links-container">
+        <div class="row mt-5 mb-5 d-flex links-container">
             <a href="/">Accueil</a>
             <a href="/offre">Offre</a>
             <a href="/savoir-faire">Savoir-faire</a>
