--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -13,7 +13,7 @@ div.dm-accordion {
   
   button.accordion-btn {
     padding: 0;
-    margin: 1rem 0;
+    padding: 1rem 0;
     border: none;
     background: none;
     width: 100%;
