--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -339,7 +339,7 @@ section#index-savoir-faire {
     div.skill-item {
       img {
         height: 5rem;
-        margin-bottom: .3rem;
+        margin-bottom: 1rem;
       }
 
       h3 {
@@ -349,7 +349,7 @@ section#index-savoir-faire {
 
       p {
         color: $secondary;
-        font-weight: 500;
+        font-weight: 600;
         // pour que le texte soit moins large que le titre
         max-width: 60%;
         margin: auto;
