--- a/_sass/_dev-machine.scss
+++ b/_sass/_dev-machine.scss
@@ -149,22 +149,51 @@ section#dm-rse {
     span.info {
       position: relative;
       font-size: 1.4rem;
-      // Affichage de bloc popup pour grand écran
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      p {
+        margin-bottom: 0;
+      }
+      
+      span.info-icon {
+        border: 1px solid $white;
+        flex-shrink: 0; // on ne modifie pas la taille du i
+        $size: 1.5rem;
+        font-size: 18px;
+        width: $size;
+        height: $size;
+        justify-content: center;
+        display: inline-flex;
+        align-items: center;
+        border-radius: 50%;
+        margin-left: .4rem;
+      }
+
+      // POPUP
       &:hover {
-      color: $primary;
+        color: $primary;
         cursor: help;
+        span.info-icon {
+          border-color: $primary;
+        }
+
         & > div.rse-onhover-items {
           display: initial;
         }
       }
 
       div.rse-onhover-items {
+        display: none;
         position: absolute;
         left: 0;
+        top: 100%;
         width: 200%;
         max-width: 35rem;
 
-        display: none;
         z-index: 2;
 
         font-size: initial;
@@ -172,7 +201,7 @@ section#dm-rse {
         color: $secondary;
         text-align: left;
 
-        box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, .3);
         border-radius: 8px;
         padding: 1rem 2rem;
 
@@ -200,6 +229,19 @@ section#dm-rse {
         @media (max-width: $sm-size) {
           max-width: 100%;
         }
+
+        // image: utopi, Time Planet, FACE
+        & > div.with-img {
+          display: flex;
+          flex-wrap: none;
+          align-items: center;
+          justify-content: space-between;
+          column-gap: 1rem;
+          img {
+            max-width: 5rem;
+            max-height: 5rem;
+          }
+        }
       }
     }
 
@@ -208,7 +250,7 @@ section#dm-rse {
         justify-content: space-between;
         margin: 0 -3rem;
         span.info {
-          max-width: 14rem;
+          max-width: 16rem;
         }
       }
     }
@@ -267,6 +309,13 @@ section#dm-rse {
       }
       img.circle {
         left: .1rem;
+      }
+      
+      &#social, &#environnemental, &#societal {
+        div.rse-subitems span.info {
+          justify-content: space-between;
+          text-align: left;
+        }
       }
     }
   }
