--- a/_sass/_dev-machine.scss
+++ b/_sass/_dev-machine.scss
@@ -15,11 +15,43 @@ section#dm-genese {
       $size: 20rem;
       width: $size;
       height: $size;
+      // pour mode mobile
+      $max-size: 60vw;
+      max-width: $max-size;
+      max-height: $max-size;
+
       img {
         width: 100%;
         height: 100%;
         object-fit: contain;
       }
+    }
+  }
+
+  blockquote.dm-quote {
+    position: relative;
+    border-left: .3rem solid $primary;
+    padding: 2rem;
+    background-color: $gray-200;
+    font-style: italic;
+    text-align: justify;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+    margin-top: 2rem;
+
+    div.quote-authors {
+      font-style: initial;
+      font-weight: 600;
+      margin-top: 1rem;
+    }
+
+    &::before {
+      font-family: Arial;
+      content: "\201C";
+      color: $primary;
+      font-size: 4em;
+      position: absolute;
+      left: 0;
     }
   }
 }
