hotfix: rename website description

--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -1,9 +1,9 @@
     <meta charset="utf-8">
     <title>{{page.title}}</title>
     <meta charset="utf-8">
-    <meta name="description" content="DEVmachine, agence de services numériques basée à Rennes" />
+    <meta name="description" content="DEVmachine, Partenaire de vos solutions numériques innovantes" />
     <meta name="keywords" content="Java, Angular, applications, mobile, web" />
-    <meta name="og:description" content="DEVmachine, agence de services numériques basée à Rennes"/>
+    <meta name="og:description" content="DEVmachine, Partenaire de vos solutions numériques innovantes"/>
   
     <meta name="og:image" content="http://www.devmachine.fr/assets/images/devmachine.png"/>
     <meta name="og:locality" content="Rennes"/>
