fix: smaller mentions legales

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,10 +29,9 @@
 
 <div class="modal fade" id="mentions" tabindex="-1" role="dialog" aria-labelledby="mentionsLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content mentions-legales">
             <div class="modal-header">
                 <h4 class="modal-title">Mentions légales</h4>
-
             </div>
             <div class="modal-body">
                 <p>L'ensemble de ce site relève des législations françaises et internationales sur le droit d'auteur et
@@ -45,10 +44,10 @@
                 <p>RCS Rennes : 844 646 463</p>
                 <p>Code APE : Conseil en systèmes et logiciels informatiques (6202A)</p>
                 <p>N° TVA : FR59844646463</p>
-                <p>Siège Social : 4 Av. des Peupliers Bâtiment F - 1er étage, 35510 Cesson-Sévigné, France</p>
+                <p>Siège Social : 4F Avenue des Peupliers, 35510 Cesson-Sévigné, France</p>
                 <p>Mail : contact@devmachine.fr</p>
                 <p>Gérant : Vincent Lescalier</p>
-                <p>Le site www.devmachine.fr a été créé par DevMachine, qui en est également le webmaster.</p>
+                <p>Le site www.devmachine.fr a été créé par DEVmachine, qui en est également le webmaster.</p>
                 <p>Directeur de la publication : Vincent Lescalier</p>
 
                 <p>Le site est hébergé par : Netlify</p>
