--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -39,4 +39,16 @@ footer {
       text-align: center;
     }
   }
+
+}
+
+// MENTIONS LEGALES
+.mentions-legales {
+  div.modal-body {
+    p {
+      font-size: .9rem;
+      line-height: 1.1rem;
+      text-align: justify;
+    }
+  }
 }
