--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -3,12 +3,15 @@
     <meta charset="utf-8">
     <meta name="description" content="DEVmachine, Partenaire de vos solutions numériques innovantes" />
     <meta name="keywords" content="Java, Angular, applications, mobile, web" />
-    <meta name="og:description" content="DEVmachine, Partenaire de vos solutions numériques innovantes"/>
-  
-    <meta name="og:image" content="http://www.devmachine.fr/assets/images/devmachine.png"/>
-    <meta name="og:locality" content="Rennes"/>
-    <meta name="og:region" content="Bretagne"/>
-    <meta name="og:site_name" content="DEVmachine"/>
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.devmachine.fr/" />
+    <meta property="og:title" content="DEVmachine" />
+    <meta property="og:description" content="DEVmachine, Partenaire de vos solutions numériques innovantes"/>
+    <meta property="og:image" content="https://www.devmachine.fr/assets/images/devmachine.png"/>
+    <meta property="og:locality" content="Rennes"/>
+    <meta property="og:region" content="Bretagne"/>
+    <meta property="og:site_name" content="DEVmachine"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
