feat(share): change image

--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://www.devmachine.fr/" />
     <meta property="og:title" content="DEVmachine" />
     <meta property="og:description" content="DEVmachine, Partenaire de vos solutions numériques innovantes"/>
-    <meta property="og:image" content="https://www.devmachine.fr/assets/images/website/page-index/dm-group.jpg"/>
+    <meta property="og:image" content="https://www.devmachine.fr/assets/images/website/page-index/dm-laptop.png"/>
     <meta property="og:locality" content="Rennes"/>
     <meta property="og:region" content="Bretagne"/>
     <meta property="og:site_name" content="DEVmachine"/>
