feat(analytics): change GA4 id

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,11 +1,11 @@
 {% if jekyll.environment == "production" %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132766057-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K6CTLNM9V7"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-132766057-1', { 'anonymize_ip': true });
+    gtag('config', 'G-K6CTLNM9V7', { 'anonymize_ip': true });
 </script>
 {% endif %}
